# powershell

./: .gitignore  CMakeLists.txt  README.md  makefile
includes/: ast.hpp
src/: ast.cpp  main.cpp  readJson.cpp  writer.cpp  writer.h
src/classes/: stack.cpp
src/headers/: readJson.hpp  stack.hpp  writer.h  writer.hpp
tests/: testador.cpp
